# tezca

./: .dockerignore  .env.example  .gitignore  .npmrc  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  db.sqlite3  docker-compose.e2e.yml  docker-compose.yml  llms-full.txt  llms.txt  package-lock.json  package.json  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  codeql.yml  deploy-admin.yml  deploy-web.yml  publish-mcp.yml  publish-sdks.yml
apps/: bluebell_lite.py
apps/admin/: Dockerfile  README.md  middleware.ts  next.config.mjs  package.json  tsconfig.tsbuildinfo
apps/api/: admin_views.py  analytics_views.py  annotation_views.py  apikey_views.py  apikeys.py  apps.py  billing_views.py  bulk_views.py  changelog_views.py  config.py  constants.py  contribution_views.py  coverage_views.py  cross_reference_views.py  es_index_manager.py  export_throttles.py  export_views.py  graph_views.py  ingestion_manager.py  judicial_views.py  law_views.py  models.py  newsletter_views.py  notification_views.py  posthog_analytics.py  preference_views.py  schema.py  search_views.py  signals.py  storage.py  tasks.py  tier_permissions.py  tier_throttles.py  tiers.json  urls.py  views.py  webhook_views.py  webhooks.py
apps/indigo/: Dockerfile  settings.py  urls.py  wsgi.py
apps/ingestion/: db_saver.py
apps/parsers/: akn_generator_v2.py  cross_reference_integration.py  embeddings.py  error_tracker.py  logger.py  pipeline.py  quality.py  state_parser.py
apps/scraper/: README.md  dof_daily.py  http.py
apps/web/: Dockerfile  README.md  eslint.config.mjs  instrumentation.ts  middleware.ts  next.config.ts  package.json  playwright.config.ts  vitest.config.mts
claudedocs/: enclii-prod-audit-prompt.md
data/: law_registry.json  law_registry.json.bak  municipal_laws_metadata.json  quality_history.json  state_registry.json  universe_registry.json
data/federal/: mx-fed-103_220321-v2.xml  mx-fed-105-v2.xml  mx-fed-109-v2.xml  mx-fed-10_270614-v2.xml  mx-fed-124-v2.xml  mx-fed-136_300118-v2.xml  mx-fed-152-v2.xml  mx-fed-157-v2.xml  mx-fed-158-v2.xml  mx-fed-159-v2.xml  mx-fed-162-v2.xml  mx-fed-164_190719-v2.xml  mx-fed-167-v2.xml  mx-fed-170_171215-v2.xml  mx-fed-171-v2.xml  mx-fed-176_210618-v2.xml  mx-fed-177-v2.xml  mx-fed-187_291214-v2.xml  mx-fed-19-v2.xml  mx-fed-192-v2.xml  mx-fed-193_171215-v2.xml  mx-fed-195-v2.xml  mx-fed-196-v2.xml  mx-fed-197-v2.xml  mx-fed-200_291214-v2.xml  mx-fed-202-v2.xml  mx-fed-204-v2.xml  mx-fed-207-v2.xml  mx-fed-208_190118-v2.xml  mx-fed-211-v2.xml  mx-fed-215-v2.xml  mx-fed-218-v2.xml  mx-fed-219-v2.xml  mx-fed-23-v2.xml  mx-fed-238-v2.xml  mx-fed-246-v2.xml  mx-fed-252-v2.xml  mx-fed-256-v2.xml  mx-fed-260-v2.xml  mx-fed-268-v2.xml  (+260 more)
data/judicial/: probe_results.json
data/noms/: discovered_noms.json
data/raw/: cff_extracted.txt  cnpp_extracted.txt  cpf_extracted.txt  lfc_extracted.txt  lfrfp_extracted.txt  loapf_extracted.txt  lpjf_extracted.txt  mun-cdmx-ley-que-regula-el-uso-de-tecnología-para-la-seguri_extracted.txt  mun-guadalajara-reglamento-interno-y-de-carrera-policial-de-la-com_extracted.txt  mun-monterrey-acuerdo-mediante-el-cual-se-realizan-modificacione_extracted.txt
data/state_laws/: gap_report.json  retry_log.txt  retry_summary.json
docs/: AUTH.md  CATALA_STATUS.md  ROADMAP_2026.md  data_gaps.md
docs/guides/: SETUP.md  (+2 more)
engines/: openfisca_mock.py
scripts/: debug_ns.py  index_laws.py  ingest_ccf.py  ingest_cpeum.py  ingest_lisr.py  ingestion_status.py  migrate_to_r2.py
tests/: conftest.py  test_calculation.py  test_calculation.py.bak  test_ccf.py  test_env.py  test_index_laws.py  test_law_api.py  test_parser_v2.py  test_scraper.py
(+606 files in other folders)
